this is the begining of the email

--- a/config.env
+++ b/config.env
@@ -1,10 +1,13 @@
-<<<<<<< HEAD
 DB_HOST= 'localhost'
 DB_USER='root'
 DB_PASS='Jupiter***Zeus'
-=======
-DB_HOST= 'localhost'
-DB_USER='root'
-DB_PASS='Jupiter***Zeus'
->>>>>>> b06bab52594600419918dd909c1ef9003054d268
 DB_NAME='cantee_management'
+
+COPY_EMAIL = "marco.duhaney@gmail.com"
+EMAIL_FROM = "TapIIICanteenService@mail.com"
+
+EMAIL_USER = "TapIIICanteenService@mail.com" #VALID USER NAME AND PASSWORD
+EMAIL_PASS = "PASSWORD1111"
+
+MAILTRAP_USER = "9e8e4e7e1333fb"
+MAILTRAP_PASS = "7c4e6e0abe2329"
