--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "express-session": "^1.18.0",
+    "html-to-text": "^9.0.5",
     "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
